Fix long field labels to wrap in editor screens

--- a/web/editor-react/scss/desktop.scss
+++ b/web/editor-react/scss/desktop.scss
@@ -123,7 +123,7 @@
       }
     }
   }
-  input[type=textarea] {
+  textarea {
     width:100%;
     height:100px;
   }
