--- a/web/editor-react/scss/forms.scss
+++ b/web/editor-react/scss/forms.scss
@@ -4,7 +4,6 @@
   flex-direction: row;
   border-bottom: 2px solid #F4F4F4;
   align-items: center;
-  height:60px;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   &:hover {
